# 3dgraphics

./: CMakeLists.txt  README.md  main.cpp
scripts/: setup.sh
